Migration jspx->thymeleaf, spring5->spring6